@@ -1,4 +1,5 @@
 HEAD
+	+ Allow to use lazy flag with EBox::Users::User::setInternal
 	+ Added unit tests for cloud sync code
 	+ Check available IP addresses when enable module
 	+ Added lock to cloud-sync script
